--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,23 @@
+annotated-types==0.7.0
+anyio==4.9.0
+click==8.1.8
+colorama==0.4.6
+ecdsa==0.19.1
 fastapi==0.115.12
-uvicorn==0.30.1
-sqlalchemy==2.0.27
-pydantic==2.11.0
-pydantic-settings==2.2.1
-python-jose==3.3.0
-passlib==1.7.4
-bcrypt==4.1.2
-python-multipart==0.0.9
-email-validator==2.1.1
-alembic==1.13.1
+greenlet==3.1.1
+h11==0.14.0
+idna==3.10
+pyasn1==0.4.8
+pydantic==2.11.3
+pydantic-settings==2.8.1
+pydantic_core==2.33.1
+python-dotenv==1.1.0
+python-jose==3.4.0
+rsa==4.9
+six==1.17.0
+sniffio==1.3.1
+SQLAlchemy==2.0.40
+starlette==0.46.2
+typing-inspection==0.4.0
+typing_extensions==4.13.2
+uvicorn==0.34.1
